syntax= "proto3";

package account_service;
option go_package = "account_service/protos";
import "google/protobuf/timestamp.proto";


service accountServiceV1 {
    rpc CreateAccount(CreateAccountRequest) returns(CreateAccountResponce){} 
    rpc RequestAccountVerificationToken(VerificationTokenRequest) returns(VerificationTokenResponce){}
    rpc VerifyAccount(VerifyAccountRequest) returns(VerifyAccountResponce){}
    rpc SignIn(SignInRequest) returns(AccessResponce){}
    rpc GetAccountID(GetAccountIDRequest) returns(AccountID){} 
    rpc Logout(LogoutRequest) returns(LogoutResponce){}
    rpc RequestChangePasswordToken(ChangePasswordTokenRequest) returns(ChangePasswordTokenResponce){}
    rpc ChangePassword(ChangePasswordRequest) returns(ChangePasswordResponce){}
    rpc GetAllSessions(GetAllSessionsRequest) returns(AllSessionsResponce){}
    rpc TerminateSessions(TerminateSessionsRequest) returns(TerminateSessionsResponce){}
}

message CreateAccountRequest {
    string Email = 1;
    string Username = 2;
    string Password = 3;
    string RepeatPassword = 4;
}

message GetAccountIDRequest {
    string SessionID = 1;
    string ClientIP = 2;
}

message AccountID {
    string AccountID = 1;
}

message CreateAccountResponce {
    bool IsSuccessfully = 1;
}

message VerificationTokenRequest {
    string Email = 1;
    string URL = 2;
}

message VerificationTokenResponce {
    bool Sended = 1;
}

message VerifyAccountRequest {
    string VerificationToken = 1;
}

message VerifyAccountResponce {
    bool AccountCreated = 1;
}

message SignInRequest {
    string Email = 1;
    string Password = 2;
    string ClientIP = 3;
}

message AccessResponce {
    string SessionID = 1;
}


message LogoutRequest {
    string SessionID = 1;
    string ClientIP = 2;
}

message LogoutResponce {
    bool Successfully = 1;
}

message ChangePasswordTokenRequest {
    string Email = 1;
    string URL = 2;
}

message ChangePasswordTokenResponce {
    bool Sended = 1;
}

message ChangePasswordRequest {
    string ChangePasswordToken = 1;
    string NewPassword = 2;
} 

message ChangePasswordResponce {
    bool Success = 1; 
}

message GetAllSessionsRequest {
    string CurrentSessionID = 1;
    string ClientIP = 2;
}

message SessionInfo {
    string  ClientIP    = 1;
    string  SessionInfo = 2; // like device or browser
    google.protobuf.Timestamp    LastActivity = 3;
}
message AllSessionsResponce {
    map<string, SessionInfo> Sessions = 1;
}

message TerminateSessionsRequest {
    string CurrentSessionID = 1;
    string ClientIP = 2;
    repeated string SessionToTerminate = 3;
}

message TerminateSessionsResponce {
    bool SuccessfullyTerminated = 1;
}